kubernetes/homelab/applications/monitoring/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
  - name: cilium-gw
    namespace: gateway
    group: gateway.networking.k8s.io	
    kind: Gateway
  hostnames:
  - "grafana.k8s.z3cyber.tech"
  rules:
   - backendRefs:
      - name: kube-prometheus-stack-grafana
        port: 80
        group: ''	
        kind: Service
        weight: 1	
     matches:	
        - path:	
            type: PathPrefix	
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
  - name: cilium-gw
    namespace: gateway
    group: gateway.networking.k8s.io	
    kind: Gateway
  hostnames:
  - "prometheus.k8s.z3cyber.tech"
  rules:
   - backendRefs:
      - name: kube-prometheus-stack-prometheus 
        port: 9090
        group: ''	
        kind: Service
        weight: 1	
     matches:	
        - path:	
            type: PathPrefix	
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-route
  namespace: monitoring
spec:
  parentRefs:
  - name: cilium-gw
    namespace: gateway
    group: gateway.networking.k8s.io	
    kind: Gateway
  hostnames:
  - "victoria.k8s.z3cyber.tech"
  rules:
   - backendRefs:
      - name: victorialogs-victoria-logs-single-server
        port: 9428
        group: ''	
        kind: Service
        weight: 1	
     matches:	
        - path:	
            type: PathPrefix	
            value: /
